--- a/frontend/src/app/components/claims/claims.component.html
+++ b/frontend/src/app/components/claims/claims.component.html
@@ -1,70 +1,70 @@
 <div class="card-body card-bg" ngxUiLoaderBlurred>
   <div class="card">
     <div class="card-body">
-      <h4 translate>claim.searchClaim</h4>
-      <br/>
-      <div class="row">
-        <div class="col-sm">
-          <label translate>claim.claimType</label>
-          <ng-select
-            [items]="operationType"
-            bindValue="value"
-            [(ngModel)]="formData.typeId"
-            placeholder="{{ 'claim.claimType' | translate }}">
-          </ng-select>
-        </div>
-        <div class="col-sm">
-          <label translate>claim.claimStatus</label>
-          <ng-select
-            [items]="appStatuses"
-            [multiple]="true"
-            bindValue="value"
-            [(ngModel)]="formData.applicationStatuses"
-            placeholder="{{ 'claim.claimStatus' | translate }}">
-          </ng-select>
-        </div>
-        <div class="col-sm">
-          <label translate>claim.crDateFromR.from</label>
-          <input placeholder="{{'claim.crDateFromR.from' | translate}}" type="text" id="crDateFrom" class="form-control"
-                 bsDatepicker #ru="bsDatepicker"
-                 [(ngModel)]="formData.crDateFrom">
-        </div>
-        <div class="col-sm">
-          <label translate>claim.crDateFromR.to</label>
-          <input type="text" id="crDateTo" class="form-control" bsDatepicker #ru="bsDatepicker"
-                 [(ngModel)]="formData.crDateTo">
-        </div>
-        <div class="col-sm">
-          <label translate>claim.lastModifyDateR.from</label>
-          <input type="text" id="lastModifyDateFrom" class="form-control" [(ngModel)]="formData.lastModifyDateFrom"
-                 bsDatepicker #ru="bsDatepicker">
-        </div>
-        <div class="col-sm">
-          <label translate>claim.lastModifyDateR.to</label>
-          <input type="text" id="lastModifyDateTo" class="form-control" [(ngModel)]="formData.lastModifyDateTo"
-                 bsDatepicker #ru="bsDatepicker">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-2">
-          <label translate>claim.lastCommentDateR.from</label>
-          <input type="text" id="lastCommentDateFrom" class="form-control" [(ngModel)]="formData.lastCommentDateFrom"
-                 bsDatepicker #ru="bsDatepicker">
-        </div>
-        <div class="col-sm-2">
-          <label translate>claim.lastCommentDateR.to</label>
-          <input type="text" id="lastCommentDateTo" class="form-control" [(ngModel)]="formData.lastCommentDateTo"
-                 bsDatepicker #ru="bsDatepicker">
-        </div>
-        <div class="col-sm-2">
-          <div class="custom-control custom-checkbox myClaim">
-            <input type="checkbox" class="custom-control-input" id="defaultUnchecked" [(ngModel)]="formData.myClaim">
-            <label class="custom-control-label" for="defaultUnchecked">Мои заявки</label>
+      <h4 class="mb-4" translate>claim.searchClaim</h4>
+      <div [formGroup]="applicationSearchForm">
+        <div class="row">
+          <div class="col-sm">
+            <label translate>claim.claimType</label>
+            <ng-select
+              [items]="operationType"
+              bindValue="value"
+              formControlName="operationTypeId"
+              placeholder="{{ 'claim.claimType' | translate }}">
+            </ng-select>
+          </div>
+          <div class="col-sm">
+            <label translate>claim.claimStatus</label>
+            <ng-select
+              [items]="appStatuses"
+              [multiple]="true"
+              bindValue="value"
+              formControlName="applicationStatusList"
+              placeholder="{{ 'claim.claimStatus' | translate }}">
+            </ng-select>
+          </div>
+          <div class="col-sm">
+            <label translate>claim.crDateFromR.from</label>
+            <input placeholder="{{'claim.crDateFromR.from' | translate}}" type="text" id="crDateFrom" class="form-control"
+                   bsDatepicker #ru="bsDatepicker" formControlName="crDateFrom">
+          </div>
+          <div class="col-sm">
+            <label translate>claim.crDateFromR.to</label>
+            <input type="text" id="crDateTo" class="form-control" bsDatepicker #ru="bsDatepicker"
+                   formControlName="crDateTo">
+          </div>
+          <div class="col-sm">
+            <label translate>claim.lastModifyDateR.from</label>
+            <input type="text" id="lastModifyDateFrom" class="form-control" formControlName="lastModifyDateFrom"
+                   bsDatepicker #ru="bsDatepicker">
+          </div>
+          <div class="col-sm">
+            <label translate>claim.lastModifyDateR.to</label>
+            <input type="text" id="lastModifyDateTo" class="form-control" formControlName="lastModifyDateTo"
+                   bsDatepicker #ru="bsDatepicker">
           </div>
         </div>
-        <div class="col-sm">
-          <label translate>claim.textSearch</label>
-          <input type="text" id="form1" class="form-control" [(ngModel)]="formData.textSearch">
+        <div class="row">
+          <div class="col-sm-3">
+            <label translate>claim.lastCommentDateR.from</label>
+            <input type="text" id="lastCommentDateFrom" class="form-control" formControlName="lastCommentDateFrom"
+                   bsDatepicker #ru="bsDatepicker">
+          </div>
+          <div class="col-sm-3">
+            <label translate>claim.lastCommentDateR.to</label>
+            <input type="text" id="lastCommentDateTo" class="form-control" formControlName="lastCommentDateTo"
+                   bsDatepicker #ru="bsDatepicker">
+          </div>
+          <!--        <div class="col-sm-2">-->
+          <!--          <div class="custom-control custom-checkbox myClaim">-->
+          <!--            <input type="checkbox" class="custom-control-input" id="defaultUnchecked" [(ngModel)]="formData.myClaim">-->
+          <!--            <label class="custom-control-label" for="defaultUnchecked">Мои заявки</label>-->
+          <!--          </div>-->
+          <!--        </div>-->
+          <div class="col-sm">
+            <label translate>claim.textSearch</label>
+            <input type="text" id="form1" class="form-control" formControlName="text">
+          </div>
         </div>
       </div>
 
