--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -3,37 +3,51 @@
   <section class="px-md-5 mx-md-5 text-center text-lg-left dark-grey-text">
     <div class="row d-flex justify-content-center">
       <div class="col-md-6">
-        <div class="text-center" [formGroup]="loginForm" >
+        <div class="text-center" [formGroup]="loginForm">
 
           <p class="h4 mb-4">Логотип</p>
-
-          <input type="text" class="form-control mb-4" placeholder="Логин"
-                 formControlName="username" [ngModel]="loginForm.username"/>
-
-          <div class="input-group mb-3">
-            <input type="password" class="form-control" placeholder="Пароль" #x aria-label="password"
-                   aria-describedby="basic-addon2" formControlName="password" [ngModel]="loginForm.password">
-            <div class="input-group-append">
-              <a class="input-group-text" id="basic-addon2" (click)="x.type=x.type=='password'?'text':'password'"><i
-                aria-hidden="true" class="fa fa-eye"></i></a>
+          <div class="row mb-4">
+            <input type="text" class="form-control" placeholder="Логин"
+                   formControlName="username" [ngModel]="loginForm.username"/>
+            <div *ngIf="f.username.touched && f.username.invalid"
+                 class="text-danger">
+              <div *ngIf="f.username.errors.required">Введите логин пользователя</div>
+            </div>
+          </div>
+          <div class="row mb-4">
+            <div class="input-group">
+              <input type="password" class="form-control" placeholder="Пароль" #x aria-label="password"
+                     aria-describedby="basic-addon2" formControlName="password" [ngModel]="loginForm.password">
+              <div class="input-group-append">
+                <a class="input-group-text" id="basic-addon2" (click)="x.type=x.type=='password'?'text':'password'"><i
+                  aria-hidden="true" class="fa fa-eye"></i></a>
+              </div>
+            </div>
+            <div *ngIf="f.password.touched && f.password.invalid"
+                 class="text-danger text-left">
+              <div *ngIf="f.password.errors.required">Введите пароль пользователя</div>
             </div>
           </div>
 
-<!--          <div class="d-flex justify-content-around">-->
-<!--            <div>-->
-<!--              <div class="custom-control custom-checkbox">-->
-<!--                <input type="checkbox" class="custom-control-input" [ngModel]="loginForm.rememberMe" id="defaultLoginFormRemember"-->
-<!--                       formControlName="rememberMe" />-->
-<!--                <label class="custom-control-label" for="defaultLoginFormRemember">Запомнить меня</label>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div>-->
-<!--              <a href="">Забыли пароль?</a>-->
-<!--            </div>-->
-<!--          </div>-->
-          <button class="btn btn-primary btn-block my-4" (click)="login()">
-            Вход
-          </button>
+          <div class="row">
+            <button class="btn btn-primary btn-block my-4" [disabled]="!this.loginForm.valid" (click)="login()">
+              Вход
+            </button>
+          </div>
+
+          <!--          <div class="d-flex justify-content-around">-->
+          <!--            <div>-->
+          <!--              <div class="custom-control custom-checkbox">-->
+          <!--                <input type="checkbox" class="custom-control-input" [ngModel]="loginForm.rememberMe" id="defaultLoginFormRemember"-->
+          <!--                       formControlName="rememberMe" />-->
+          <!--                <label class="custom-control-label" for="defaultLoginFormRemember">Запомнить меня</label>-->
+          <!--              </div>-->
+          <!--            </div>-->
+          <!--            <div>-->
+          <!--              <a href="">Забыли пароль?</a>-->
+          <!--            </div>-->
+          <!--          </div>-->
+
 
         </div>
       </div>
