--- a/frontend/src/app/helpers/footer/footer.component.html
+++ b/frontend/src/app/helpers/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small blue fixed-bottom">
+<footer class="page-footer font-small indigo fixed-bottom">
   <div class="footer-copyright text-center py-3">© {{year}} Copyright:
     <a > htc.dilau.kz</a>  v: {{currentApplicationVersion}}
   </div>
