--- a/frontend/src/app/helpers/nav/nav.component.html
+++ b/frontend/src/app/helpers/nav/nav.component.html
@@ -1,5 +1,5 @@
 <!--Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark primary-color" *ngIf="currentUser">
+<nav class="navbar navbar-expand-lg navbar-dark indigo" *ngIf="currentUser">
   <a class="navbar-brand" href="#">HTC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
           aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,28 +7,53 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item " [ngClass]="isActive() ? 'active' : ''">
         <a class="nav-link" (click)="dnHref('analytics')">
           <span translate>analytics.title</span>
         </a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" [ngClass]="isActive() ? 'active' : ''">
         <a class="nav-link" (click)="dnHref('news')">
           <span translate>news.title</span>
         </a>
       </li>
+      <li class="nav-item" [ngClass]="isActive() ? 'active' : ''">
+        <a class="nav-link" (click)="dnHref('objects')">
+          <span translate>objects.title</span>
+        </a>
+      </li>
+      <li class="nav-item" [ngClass]="isActive() ? 'active' : ''">
+        <a class="nav-link" (click)="dnHref('board')">
+          <span translate>controlPanels.title</span>
+        </a>
+      </li>
+      <li class="nav-item" [ngClass]="isActive() ? 'active' : ''">
+        <a (click)="dnHref('claims')" class="nav-link">
+          <span translate>claim.title</span>
+        </a>
+      </li>
+      <li class="nav-item" [ngClass]="isActive() ? 'active' : ''">
+        <a class="nav-link" (click)="dnHref('staffs')">
+          <span translate>staffs.title</span>
+        </a>
+      </li>
+      <li class="nav-item" [ngClass]="isActive() ? 'active' : ''">
+        <a class="nav-link" (click)="dnHref('dic-control')">
+          <span translate>Управление справочниками</span>
+        </a>
+      </li>
     </ul>
     <ul class="navbar-nav ml-auto nav-flex-icons">
-      <li class="nav-item" [className]="_language.language == 'ru' ? 'active' : ''">
-        <a class="nav-link waves-effect waves-light">
-          <a (click)="changeLang('ru')">Рус</a>
-        </a>
-      </li>
-      <li class="nav-item" [className]="_language.language == 'kz' ? 'active' : ''">
-        <a class="nav-link waves-effect waves-light">
-          <a (click)="changeLang('kz')">Қаз</a>
-        </a>
-      </li>
+<!--      <li class="nav-item" [className]="_language.language == 'ru' ? 'active' : ''">-->
+<!--        <a class="nav-link waves-effect waves-light">-->
+<!--          <a (click)="changeLang('ru')">Рус</a>-->
+<!--        </a>-->
+<!--      </li>-->
+<!--      <li class="nav-item" [className]="_language.language == 'kz' ? 'active' : ''">-->
+<!--        <a class="nav-link waves-effect waves-light">-->
+<!--          <a (click)="changeLang('kz')">Қаз</a>-->
+<!--        </a>-->
+<!--      </li>-->
       <li class="nav-item dropdown">
 
         <a class="nav-link dropdown-toggle text-uppercase" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
@@ -46,30 +71,30 @@
   </div>
 </nav>
 
-<ul class="nav justify-content-center lighten-4 py-1 nav2" *ngIf="currentUser">
-  <li class="nav-item">
-    <a class="nav-link" (click)="dnHref('objects')">
-      <span translate>objects.title</span>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" (click)="dnHref('board')">
-      <span translate>controlPanels.title</span>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a (click)="dnHref('claims')" class="nav-link">
-      <span translate>claim.title</span>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" (click)="dnHref('staffs')">
-      <span translate>staffs.title</span>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" (click)="dnHref('dic-control')">
-      <span translate>Управление справочниками</span>
-    </a>
-  </li>
-</ul>
+<!--<ul class="nav justify-content-center lighten-4 py-1 nav2" *ngIf="currentUser">-->
+<!--  <li class="nav-item">-->
+<!--    <a class="nav-link" (click)="dnHref('objects')">-->
+<!--      <span translate>objects.title</span>-->
+<!--    </a>-->
+<!--  </li>-->
+<!--  <li class="nav-item">-->
+<!--    <a class="nav-link" (click)="dnHref('board')">-->
+<!--      <span translate>controlPanels.title</span>-->
+<!--    </a>-->
+<!--  </li>-->
+<!--  <li class="nav-item">-->
+<!--    <a (click)="dnHref('claims')" class="nav-link">-->
+<!--      <span translate>claim.title</span>-->
+<!--    </a>-->
+<!--  </li>-->
+<!--  <li class="nav-item">-->
+<!--    <a class="nav-link" (click)="dnHref('staffs')">-->
+<!--      <span translate>staffs.title</span>-->
+<!--    </a>-->
+<!--  </li>-->
+<!--  <li class="nav-item">-->
+<!--    <a class="nav-link" (click)="dnHref('dic-control')">-->
+<!--      <span translate>Управление справочниками</span>-->
+<!--    </a>-->
+<!--  </li>-->
+<!--</ul>-->
