--- a/frontend/src/app/components/profile/my-clients/client-card/client-card.component.html
+++ b/frontend/src/app/components/profile/my-clients/client-card/client-card.component.html
@@ -28,7 +28,7 @@
               <div class="col-sm-10">
                 <div class="input-group">
                   <input type="text" class="form-control" placeholder="Телефон" id="inputEmail3MD" [disabled]="true"
-                         [(ngModel)]="formClient.phoneNumber" prefix="+7" mask="(000) 000 00 00">
+                         [(ngModel)]="formClient.phoneNumber" prefix="+" mask="0(000) 000 00 00">
                   <div class="input-group-append">
                     <span class="input-group-text"><i aria-hidden="true" class="fa fa-whatsapp text-success"></i></span>
                     <span class="input-group-text"><i aria-hidden="true" class="fa fa-telegram text-primary"></i></span>
@@ -166,7 +166,7 @@
             <div class="col-sm">
               <div  >
                 <label class="col-sm col-form-label">Телефон<span class="text-danger">&nbsp;*</span></label>
-                  <div class="row" style="margin-left: 1px"> <input  type="text" class="col-sm form-control" name="nameEn" prefix="+7" mask="(000) 000 00 00" [disabled]="!rgRoles"
+                  <div class="row" style="margin-left: 1px"> <input  type="text" class="col-sm form-control" name="nameEn" prefix="+" mask="0(000) 000 00 00"[disabled]="!rgRoles"
                                            (input)="getDataByPhoneNumber()"
                                            [(ngModel)]="formClient.phoneNumber">
                     <a  style="margin-left: 10px" (click)="addPhoneNumber()"><i style="color:green"
@@ -179,7 +179,7 @@
               <div *ngFor="let item of formClient.clientPhoneNumbersDtoList;let index = index">
 
                 <label class="col-sm col-form-label">Доп телефон</label>
-                <input type="text" class="col-sm form-control" [(ngModel)]="item.phoneNumber" prefix="+7" mask="(000) 000 00 00">
+                <input type="text" class="col-sm form-control" [(ngModel)]="item.phoneNumber" prefix="+" mask="0(000) 000 00 00">
               </div>
               <div>
                 <label class="col-sm col-form-label">Почта<span class="text-danger">&nbsp;*</span></label>
