--- a/frontend/src/app/components/dic-control/dic-control.component.html
+++ b/frontend/src/app/components/dic-control/dic-control.component.html
@@ -65,7 +65,7 @@
                     bindValue="value"
                     bindLabel="label"
                     [items]="cities"
-                    [(ngModel)]="dic.cityId">
+                    [(ngModel)]="dic.buildingDto.cityId">
                   </ng-select>
                 </td>
                 <td>
@@ -75,7 +75,7 @@
                     bindValue="value"
                     bindLabel="label"
                     [items]="districts"
-                    [(ngModel)]="dic.districtId">
+                    [(ngModel)]="dic.buildingDto.districtId">
                   </ng-select>
                 </td>
                 <td>
@@ -85,14 +85,14 @@
                     bindValue="value"
                     bindLabel="label"
                     [items]="streets"
-                    [(ngModel)]="dic.streetId">
+                    [(ngModel)]="dic.buildingDto.streetId">
                   </ng-select>
                 </td>
                 <td>
-                  {{dic.houseNumber}}
+                  {{dic.buildingDto.houseNumber}}
                 </td>
                 <td>
-                  {{dic.houseNumberFraction}}
+                  {{dic.buildingDto.houseNumberFraction}}
                 </td>
                 <td>
                   {{dic.houseName}}
@@ -139,7 +139,7 @@
                   {{dic.housingClass}}
                 </td>
                 <td>
-                  {{dic.housingCondition}}
+                  {{dic.housingConditionId}}
                 </td>
                 <td>
                   <ng-select
@@ -330,10 +330,10 @@
               bindValue="value"
               bindLabel="label"
               [items]="cities"
-              [(ngModel)]="formRes.cityId">
+              [(ngModel)]="formRes.buildingDto.cityId">
             </ng-select>
-            <div *ngIf="!formRes.cityId" class="text-danger">
-              <div *ngIf="!formRes.cityId" translate>claim.requiredField</div>
+            <div *ngIf="!formRes.buildingDto.cityId" class="text-danger">
+              <div *ngIf="!formRes.buildingDto.cityId" translate>claim.requiredField</div>
             </div>
           </div>
           <div class="col-sm" *ngIf="resident">
@@ -342,7 +342,7 @@
               bindValue="value"
               bindLabel="label"
               [items]="districts"
-              [(ngModel)]="formRes.districtId">
+              [(ngModel)]="formRes.buildingDto.districtId">
             </ng-select>
           </div>
           <div class="col-sm" *ngIf="resident">
@@ -352,25 +352,25 @@
               bindValue="value"
               bindLabel="label"
               [items]="streets"
-              [(ngModel)]="formRes.streetId">
+              [(ngModel)]="formRes.buildingDto.streetId">
             </ng-select>
-            <div *ngIf="!formRes.streetId" class="text-danger">
-              <div *ngIf="!formRes.streetId" translate>claim.requiredField</div>
+            <div *ngIf="!formRes.buildingDto.streetId" class="text-danger">
+              <div *ngIf="!formRes.buildingDto.streetId" translate>claim.requiredField</div>
             </div>
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Номер здания (дома)<span class="text-danger">&nbsp;*</span></label>
             <input type="text"  maxlength="3"  min="1" oninput="this.value=this.value.replace(/[^0-9]/g,'');"
                    value=${var} class="col-sm form-control" name="houseNumber"   required="true"
-                   [(ngModel)]="formRes.houseNumber">
-            <div *ngIf="!formRes.houseNumber" class="text-danger">
-              <div *ngIf="!formRes.houseNumber" translate>claim.requiredField</div>
+                   [(ngModel)]="formRes.buildingDto.houseNumber">
+            <div *ngIf="!formRes.buildingDto.houseNumber" class="text-danger">
+              <div *ngIf="!formRes.buildingDto.houseNumber" translate>claim.requiredField</div>
             </div>
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Номер дома (дробь/буква/строение)</label>
             <input type="text" maxlength="3" class="col-sm form-control" name="houseNumberFraction"
-                   [(ngModel)]="formRes.houseNumberFraction">
+                   [(ngModel)]="formRes.buildingDto.houseNumberFraction">
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Название дома (ЖК) <span class="text-danger">&nbsp;*</span></label>
@@ -438,7 +438,7 @@
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Состояние</label>
             <input type="text" maxlength="50" class="col-sm form-control" name="housingCondition"
-                   [(ngModel)]="formRes.housingCondition">
+                   [(ngModel)]="formRes.housingConditionId">
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Тип лифта</label>
